--- a/src/main/webapp/WebDomoCss.css
+++ b/src/main/webapp/WebDomoCss.css
@@ -5,10 +5,14 @@
 body { font: 300 15px/1.2 "Ubuntu",sans-serif; background: #1E1E23 ; margin: 0px; } /* background: #333; max-width: 500px; */
 
 h1 { margin-bottom: 10px; color: #fff; font-size: 25px; font-weight: 600; text-shadow: 1px 1px 2px #000; }  /* letter-spacing: 10px; */
-h2 { margin-bottom: 20px; color: #fff; font-size: 22px; font-weight: 600; text-shadow: 1px 1px 2px #000; }
+h2 { margin-bottom: 20px; color: #495159; font-size: 22px; font-weight: 600; text-shadow: 1px 1px 2px #000; }
 h3 { margin-bottom: 20px; font-size: 20px; font-weight: 600; color: black; text-shadow: 1px 1px 2px #000; }
 
+alarm { margin-bottom: 20px; color: #fff; font-size: 22px; font-weight: 600; text-shadow: 1px 1px 2px #000; }
+
 #contentgray { position: relative; z-index: 3; clear: both; padding: 00px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,.5); 	background: #ddd; }
+#risque { position: relative; z-index: 3; clear: both; padding: 00px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,.5); 	background: #5A2328; }
+#fine { position: relative; z-index: 3; clear: both; padding: 00px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,.5); 	background: #81A094; }
 #contenttable { background: #eee; border-collapse: collapse; padding: 10px; }
 
 /* Navigation V1 avec onglets
